Added questions object

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="constainer display-2 text-center py-3 text-primary">Jujutsu Kaisen Quiz</div>
 
     <!--Questions Section-->
-    <form class="container rounded bg-primary text-white py-3">
+    <form id="questionsContainer" class="container rounded bg-primary text-white py-2">
         <div>
             <label for="q1" class="form-label">This is question no 1:</label>
             <div class="form-check">
